# ndio-series

./: CMakeLists.txt  config.h.in
cmake/: FindRE2.cmake  gtest-config.cmake  nd-config.cmake  re2-config.cmake  tre-config.cmake
doc/: mainpage.doc.h
src/: ndio-series.cc
test/: io.cc
test/data/: TODO
test/data/a/: vol.1ch0011.tif  vol.1ch0012.tif  vol.1ch0013.tif  vol.1ch0014.tif  vol.1ch0015.tif  vol.1ch0016.tif  vol.1ch0017.tif  vol.1ch0018.tif  vol.1ch0019.tif  vol.1ch0020.tif
test/data/b/: vol.0.0000.tif  vol.0.0001.tif  vol.0.0002.tif  vol.0.0003.tif  vol.0.0004.tif  vol.0.0005.tif  vol.0.0006.tif  vol.0.0007.tif  vol.0.0008.tif  vol.0.0009.tif  vol.0.0010.tif  vol.0.0011.tif  vol.0.0012.tif  vol.0.0013.tif  vol.0.0014.tif  vol.0.0015.tif  vol.1.0000.tif  vol.1.0001.tif  vol.1.0002.tif  vol.1.0003.tif  vol.1.0004.tif  vol.1.0005.tif  vol.1.0006.tif  vol.1.0007.tif  vol.1.0008.tif  vol.1.0009.tif  vol.1.0010.tif  vol.1.0011.tif  vol.1.0012.tif  vol.1.0013.tif  vol.1.0014.tif  vol.1.0015.tif
test2/: CMakeLists.txt  tre.c
